--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
     "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
